--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,5 +12,5 @@ layout: default
 
 <h3>Tags: </h3>
 {% for tag in page.tags %}
-<a href="/tags#{{ tag }}">{{ tag }}</a>
+<a href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag }}</a>
 {% endfor %}
