--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,7 +10,7 @@ layout: default
   <h3 id="{{ tag[0] }}">{{ tag[0] }}</h3>
   <ul>
     {% for post in tag[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 {% endfor %}
