--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -4,7 +4,7 @@ layout: default
 
 <h2>{{ page.title }}</h2>
 
-<p>{{ site.url | relative_url}}</p>
+<p>{{ site.url | absolute_url}}</p>
 
 {{ content }}
 
