--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <aside>
 	<div class="container">
 		<nav>
+			<a href="{{ site.baseurl }}">
+				<img src="/assets/logo.png" alt="Blog logo" width="48">{{ site.title }}
+			</a>
 			<ul>
 {% for page in site.pages %} {% if page.title %}
 <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
