update logo path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<nav>
 			<a href="{{ site.baseurl }}">
-				<img src="/assets/logo.png" alt="Blog logo" width="48">{{ site.title }}
+				<img src="{{ site.baseurl }}/assets/logo.png" alt="Blog logo" width="48">{{ site.title }}
 			</a>
 			<ul>
 {% for page in site.pages %} {% if page.title %}
