--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,13 @@
 <footer>
-	<p>By <a href="http://jdarrach.github.com/jekyllsite">Jeremy</p>
+	<div class="foot1">
+		<a href="{{ site.baseurl }}">
+			<img src="{{ site.baseurl }}/assets/logo.png" alt="Blog logo" width="96">
+		</a>
+	</div>
+	<div class="foot2">
+		<p>2024 © Jeremy.</p>
+	</div>
+	<div class="foot3">
+		<a href="mailto:jeremydarrach@gmail.com" class="fa fa-envelope"></a>
+	</div>
 </footer>
