--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,7 +15,7 @@ layout: default
 	{% for post in tag[1] %}
 	<div class="postcard">
 	  <a href="{{ post.url }}">
-		<img src="{{ post.thumbnail }}">
+		<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
 	  </a>
 	  <div class="posttitle">
 		  <a href="{{ post.url }}">
