--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,13 @@
 			<a href="{{ site.baseurl }}">
 				<img src="{{ site.baseurl }}/assets/logo.png" alt="Blog logo" width="48">{{ site.title }}
 			</a>
+			
 			<ul>
-{% for page in site.pages %} {% if page.title %}
-<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-{% endif %} {% endfor %}
-<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
-			</ul>
-			</li>
+				<li><a href="/search" class="fa fa-search fa-lg"></a></li>
+				{% for page in site.pages %} {% if page.title %}
+				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+				{% endif %} {% endfor %}
+				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
 			</ul>
 		</nav>
 	</div>
