--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,8 +15,8 @@ layout: default
 	{% for post in tag[1] %}
 	<div class="postcard">
 	  <a href="{{ post.url }}">
-		<!--<img src="{{ site.baseurl }}/{{ post.thumbnail }}">-->
-		<img src="{{ post.thumbnail }}">
+		<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+		<!---<img src="{{ post.thumbnail }}">-->
 	  </a>
 	  <div class="posttitle">
 		  <a href="{{ post.url }}">
