--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -136,11 +136,21 @@ footer {
 
 /* top section of home page */
 .home{
-	display:flex;
+	display:block;
+	margin:0 auto;
 	padding:20px 0;
 	gap:40px;
 	align-items:center;
 	margin-bottom:40px;
+	div{
+		display:block;
+		margin:auto;
+	}
+	img{
+		width:100%;
+		max-height:300px;
+		object-fit:cover;
+	}
 }
 .home h1{
 	line-height:1;
