--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -5,6 +5,9 @@
 	}
 }
 @media screen and (min-width: 1200px){
+	.home{
+		display:flex;
+	}
 	.blogposts{
 		grid-template-columns: repeat(3, 1fr);
 	}
