--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 <div class="pageheading">
 	<div>
 		{% if page.headingimg %}
-		<img src="{{ page.headingimg }}">
+		<img src="{{ site.baseurl }}/{{ page.headingimg }}">
 		{% endif %}
 	</div>
 	<div>
