--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,4 +1,9 @@
 /* responsive css */
+@media screen and (min-width: 700px){
+	.pageheading{
+		display:flex;
+	}
+}
 @media screen and (min-width: 820px){
 	.blogposts{
 		grid-template-columns: repeat(2, 360px);
