--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,6 @@
 $content-width: 1200px;
 $main: #19ccaa;
-$font-style: 'Open Sans', sans-serif;
+$font-style: 'DM Sans', sans-serif;
 $font-color: #262626;
 $link-color: #425469;
 $link-hover-color: $main;
