--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     type="text/css"
   />
   <link
-    href="https://fonts.googleapis.com/css?family=Muli:400,300"
+    href="https://fonts.googleapis.com/css?family=Young+Serif:400"
     rel="stylesheet"
     type="text/css"
   />
