--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,7 @@ $font-style: 'DM Sans', sans-serif;
 $font-color: #262626;
 $link-color: #425469;
 $link-hover-color: $main;
-$heading-font: 'Young Serif', sans-serif;
+$heading-font: 'Texturina', sans-serif;
 $heading-font-color: #425469;
 $light: #e7edf4;
 $header: #1d1425;
