--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     type="text/css"
   />
   <link
-    href="https://fonts.googleapis.com/css?family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap"
+    href="https://fonts.googleapis.com/css?family=Inter:wght@100..900&display=swap"
     rel="stylesheet"
     type="text/css"
   />
