base colors update

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,12 +1,12 @@
 $content-width: 1200px;
-$main: #19ccaa;
+$main: #c73d46;
 $font-style: 'DM Sans', sans-serif;
-$font-color: #262626;
+$font-color: #4a2a34;
 $link-color: #425469;
 $link-hover-color: $main;
 $heading-font: 'DM Sans', sans-serif;
 $heading-font-color: #425469;
-$light: #e7edf4;
+$light: #f3e2e5;
 $header: #1d1425;
 
 *,
