base color changes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,11 +1,11 @@
 $content-width: 1200px;
-$main: #c73d46;
+$main: #E44B56;
 $font-style: 'DM Sans', sans-serif;
 $font-color: #4a2a34;
-$link-color: #425469;
+$link-color: #4a2a34;
 $link-hover-color: $main;
 $heading-font: 'DM Sans', sans-serif;
-$heading-font-color: #425469;
+$heading-font-color: #4a2a34;
 $light: #f3e2e5;
 $header: #1d1425;
 
