--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,7 @@ $link-hover-color: $main;
 $heading-font: 'DM Sans', sans-serif;
 $heading-font-color: #4a2a34;
 $light: #f3e2e5;
-$header: #1d1425;
+$header: #4a2a34;
 
 *,
 *::before,
