--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -71,7 +71,7 @@ aside {
   position: fixed;
   top: 0;
   left: 0;
-  background: #fff;
+  background: #fdfff9;
   width: 100%;
   z-index: 2;
   border-bottom: 1px solid lighten($light, 30%);
