--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,11 +3,13 @@ $main: #E44B56;
 $font-style: 'DM Sans', sans-serif;
 $font-color: #4a2a34;
 $link-color: #4a2a34;
-$link-hover-color: $main;
+$link-hover-color: $light;
 $heading-font: 'DM Sans', sans-serif;
 $heading-font-color: #4a2a34;
 $light: #f3e2e5;
 $header: #4a2a34;
+$alt-main: #0d7ebb;
+$alt-light: #d1f1ff;
 
 *,
 *::before,
