site name main color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <aside>
 	<div class="container">
 		<nav>
-			<a href="{{ site.baseurl }}">
+			<a href="{{ site.baseurl }}" class="main-color">
 				<img src="{{ site.baseurl }}/assets/logo.png" alt="Blog logo" width="48">{{ site.title }}
 			</a>
 			
