--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -118,7 +118,7 @@ aside {
           &:active {
             background: $header;
             text-decoration: none;
-            color: $main;
+            color: $link-hover-color;
           }
         }
       }
