--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,7 +235,7 @@ hr{
 		text-decoration:none;
 		padding:3px 6px;
 		margin-bottom:4px;
-		background-color:$main;
+		background-color:$alt-light;
 		border-radius:2px;
 		font-weight:200;
 		color:white;
@@ -243,7 +243,7 @@ hr{
 	p{
 		text-decoration:none;
 		padding:3px 6px;
-		background-color:$main;
+		background-color:$alt-light;
 		border-radius:2px;
 		font-weight:200;
 		color:white;
