--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -238,7 +238,7 @@ hr{
 		background-color:$alt-light;
 		border-radius:2px;
 		font-weight:200;
-		color:white;
+		color:$font-color;
 	}
 	p{
 		text-decoration:none;
@@ -246,7 +246,7 @@ hr{
 		background-color:$alt-light;
 		border-radius:2px;
 		font-weight:200;
-		color:white;
+		color:$font-color;
 	}
 }
 .tagspage{
