--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,12 +2,12 @@ $content-width: 1200px;
 $main: #E44B56;
 $light: #f3e2e5;
 $font-style: 'DM Sans', sans-serif;
-$font-color: #4a2a34;
-$link-color: #4a2a34;
+$font-color: #27161b;
+$link-color: #27161b;
 $link-hover-color: $light;
 $heading-font: 'DM Sans', sans-serif;
-$heading-font-color: #4a2a34;
-$header: #4a2a34;
+$heading-font-color: #27161b;
+$header: #27161b;
 $alt-main: #0d7ebb;
 $alt-light: #d1f1ff;
 
