--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -163,11 +163,14 @@ footer {
 		max-height:300px;
 		object-fit:cover;
 	}
+	p{
+		font-size:1.5em;
+	}
 }
 .home h1{
 	line-height:1;
 	margin:0;
-	font-size:3em;
+	font-size:3.2em;
 }
 
 /* blog posts with thumbnails */
