--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -162,10 +162,11 @@ footer {
 		width:100%;
 		max-height:300px;
 		object-fit:cover;
-		min-width:480px;
+		min-width:600px;
 	}
 	p{
 		font-size:1.5em;
+		line-height:1;
 	}
 }
 .home h1{
