--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -99,6 +99,9 @@ aside {
 	  align-items:center;
 	  text-decoration:none;
 	  font-size:1.2em;
+	  img{
+		padding-right:20px;
+	  }
 	}
 	a:hover{
 	  text-decoration:none;
