update footer name and email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
 		</a>
 	</div>
 	<div class="foot2">
-		<p>2024 © Jeremy.</p>
+		<p>2024 © uncombo.</p>
 	</div>
 	<div class="foot3">
-		<a href="mailto:jeremydarrach@gmail.com" class="fa fa-envelope"></a>
+		<a href="mailto:info@uncombo.com" class="fa fa-envelope"></a>
 	</div>
 </footer>
