--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,7 +100,7 @@ aside {
 	  text-decoration:none;
 	  font-size:1.2em;
 	  img{
-		padding-right:20px;
+		margin-right:20px;
 		min-width:48px;
 	  }
 	}
