--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -129,9 +129,9 @@ aside {
           box-shadow: 0;
           &:hover,
           &:active {
-            background: linear-gradient(45deg, $main, $alt-light);
+            background: linear-gradient(45deg, $main, $alt-light 70%);
             text-decoration: none;
-            color: $link-hover-color;
+            color: $link-color;
           }
         }
       }
