--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -131,7 +131,7 @@ aside {
           &:active {
             background: $header;
             text-decoration: none;
-            color: $alt-light;
+            color: #fdfff9;
           }
         }
       }
