add image alt text

--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,7 +15,7 @@ layout: default
 	{% for post in tag[1] %}
 	<div class="postcard">
 	  <a href="{{ site.baseurl }}{{ post.url }}">
-		<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+		<img src="{{ site.baseurl }}/{{ post.thumbnail }}" alt="{{ post.alt }}">
 		<!---<img src="{{ post.thumbnail }}">-->
 	  </a>
 	  <div class="posttitle">
