--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,15 +7,15 @@
 			
 			<ul>
 				<li><a href="{{ site.baseurl }}/search" class="fa fa-search fa-lg"></a></li>
-				{% for page in site.pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-				{% endif %} {% endfor %}
+				{% for page in site.pages %}
+					{% unless page.exclude %}
+						{% if page.title %}
+							<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+						{% endif %}
+					{% endunless %}
+				{% endfor %}
 				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
 			</ul>
 		</nav>
 	</div>
 </aside>
-
-<!--<header>
-	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
-</header>-->
