about page title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,14 @@
 			
 			<ul>
 				<li><a href="{{ site.baseurl }}/search" class="fa fa-search fa-lg"></a></li>
-				{% for page in site.pages %}
+				<!--{% for page in site.pages %}
 					{% unless page.exclude %}
 						{% if page.title %}
 							<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 						{% endif %}
 					{% endunless %}
-				{% endfor %}
+				{% endfor %}-->
+				<li><a href="{{ site.baseurl }}/about">About</a></li>
 				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
 			</ul>
 		</nav>
